# ai-reporting

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/: company_parser_profile.json  disclosure_checklists.json  source_cell_map_q1.json  standard_q1_scf_template.json
config/skills/: accounting_memo_draft.md  close_package_review.md  contract_accounting.md  controls_evidence_review.md  disclosure_checklist.md  disclosure_draft_redline.md  filing_draft.md  financial_statement_flux_analysis.md  intake_context.md  review_validation.md  reviewer_findings.md  rule_research.md  rule_to_claim_coverage.md  scf_generation.md  schedule_generation.md  source_file_parsing.md  source_trace_evidence.md  tie_out_review.md  variance_explanation.md  xbrl_filing_mechanics.md
data/: reporting_knowledge_seed.json
docs/: IMPLEMENTED_FEATURES.md  agent-operating-model.md  current-sprint.md  integration-roadmap.md  product-roadmap.md  strategy-review.md  technical-architecture-plan.md  vercel-deploy-readiness.md
features/: README.md  chat-and-model-provider.md  deployment.md  knowledge-base.md  reporting-skills.md  scf-generation.md  session-files-and-artifacts.md  slack-integration.md  web-interface.md
src/ai_reporting/: __init__.py  amortization.py  chat.py  cli.py  disclosure.py  engine.py  env.py  evidence.py  file_context.py  formula.py  knowledge.py  (+19 more)
tests/: test_chat_context.py  test_deploy_readiness.py  test_first_milestone.py  test_llm.py  test_slack_integration.py
web/: app.js  index.html  styles.css
